k8s/bills-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bills
  labels:
    name: bills
