k8s/bills-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bills
  namespace: bills
  labels:
    app: bills
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bills
  template:
    metadata:
      labels:
        app: bills
    spec:
      restartPolicy: Always
      containers:
        - name: bills
          image: ${DEPLOYED_IMAGE}
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: web
