k8s/bills-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: bills
  name: bills
  labels:
    app: bills
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: web
  selector:
    app: bills
