k8s/bills-http-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bills-http
  namespace: bills
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: ${APP_DEV_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bills
                port:
                  name: web
